<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Find Your Way</string>
    <string name="slogan_name">We\'ll move you!</string>
    <string name="powered_by">Powered By Kamran</string>

    <!--Strings for OnBoarding Screen-->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Description-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related locations</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform a call</string>
    <string name="third_slide_desc">If you have a shop or something and want to be part of our growing industry then add your place by </string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket don\'t have to worry </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- Strings for Dashboard -->

    <!-- Categories -->
    <string name="hotels">Hotels</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!-- Titles & Description -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_descriptions">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search....</string>

    <!-- TODO: Retailer Panel String -->

    <!-- General Settings -->
    <string name="retailer_heading">Grow \nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create \nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!-- OTP Screen -->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time code sent on\n+923030261125</string>

</resources>